--- a/requirements.txt
+++ b/requirements.txt
@@ -20,4 +20,4 @@ kubernetes
 autopep8
 squarify
 dill
-git+git://github.com/vecma-project/QCG-PilotJob@develop#egg=qcg-pilotjob
+git+https://github.com/vecma-project/QCG-PilotJob@develop#egg=qcg-pilotjob
