--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,5 +3,8 @@ version: 2
 python:
   version: 3.7
   install:
-    - requirements: docs/requirements.txt
-    - requirements: requirements.txt
+    install:
+      - method: pip
+        path: .
+        extra_requirements:
+          requirements: docs
