--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,5 +5,4 @@ python:
   install:
     - method: pip
       path: .
-      extra_requirements:
-        - docs
+    - requirements: docs/requirements.txt
